--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "MAD Shop",
-  "name": "MAD Shop",
+  "short_name": "MAD Enterprise",
+  "name": "MAD Enterprise",
   "icons": [
     {
       "src": "favicon.ico",
